test/error/iface/err3.rzy
component
  Sub
    output
      funcA();
      funcB();
      
    implementation elementary
  end

  Err3
    implementation elementary
    
    component
      a : Sub;

    function a.funcA()
    end

  end

